# aatc_mcp_server

./: .env.example  .mcp.json  CLAUDE.md  Dockerfile  INSTRUCTIONS.txt  NEXT_CHANGES.md  README.md  UPDATING_SCHEMA.md  WINDOWS_SETUP.md  docker-compose.yml  pyproject.toml  test_server.py
.github/: copilot-instructions.md
data/: aact_schema_static.json  column_profiles.json  column_profiles_big.json  generate_column_profiles.py  glossary.json  query_patterns.json
src/: __init__.py  __main__.py  server.py
visualizer/: Dockerfile  app.py  index.html  requirements.txt  schema_compact.txt
